assets/style.css
* {
 font-family: 'Poppins', sans-serif;
 color: black;  
}

body {
    height: 100%;
    margin: 25px;
    background-image: url(https://images.pexels.com/photos/209831/pexels-photo-209831.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
    background-repeat: no-repeat;
    background-size: cover;
    font-size: 100%;
}

h1 {
  text-align: center;
  font-size: 40px;
  padding: 10px;
  margin: 20px;
}

h2 {
  text-align: center;
  font-size: 40px;
  padding: 10px;
  margin: 20px;
}

h3 {
  line-height: .5em;
  text-transform: capitalize;
}

input.search-bar {
  border: none;
  outline: none;
  padding: 15px 25px;
  box-shadow: 0 8px 16px 0 aliceblue;
  text-decoration: none;
  border-radius: 8px;
  font-size: 18px;
}

#search-btn {
    background-color: #008cba;
    height: 10%;
    width: 24%;
    border-radius: 8px;
    color: aliceblue;
    padding: 5px 15px;
    margin-top: 10px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,2);
    cursor:pointer;
  }
  
  .button:hover{
    background-color: #555555;
    color:aliceblue;
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24);
    transition: .4s ease-in;
  }
  
  .header-card{
    background: rgba(178, 176, 177, 0.7);
    border-radius: 30px;
    width: auto;
  }

    .forecast-header{
    background: rgba(178, 176, 177, 0.7);
    border-radius: 30px;
    width: auto;
  }
  
  .row{
    display: flex;
    gap: 10px;
    margin-bottom: 10px;
  }
  
  .column {
    background-color: rgba(178, 176, 177, 0.5);;
    padding: 1rem 0;
    flex: 1;
    border-radius: 30px;
    text-align: center;
    font-weight: bold;
  }

  .container-current {
    max-width: 1000px;
    margin: 0 auto;
  }

  .container.forecast {
  max-width: 1200px;
  margin: 0 auto;
  }

  .current-icon {
    height: 150px;
    width: 150px;
  }

  

@media only screen and (max-width: 767px) {
  .row{
    flex-wrap: wrap;
  }
  .column{
    flex-basis: 100%;
  }

  .header-card{
    flex-basis: 100%;
  }
}

